Sanitizes model names and reuse of models throughout the spec
We have some inconsistencies in the way the models are currently defined:

- For models that have different representations, we sometimes use the plain model name (e.g. `Activity`) rather than a name that includes the representation (e.g. 'DetailedActivity`)
- We don't always reuse existing definitions (i.e. `allOf`) when we could or should be doing that

This change canonicalizes the `Detailed/Summary/Meta` naming scheme and reuses each representation in the upper level.

--- a/swagger/activity.json.mustache
+++ b/swagger/activity.json.mustache
@@ -1,5 +1,5 @@
 {
-  "Activity": {
+  "DetailedActivity": {
     "allOf": [
       {
         "$ref": "{{reference_prefix}}/activity.json#/SummaryActivity"
@@ -24,7 +24,7 @@
           "segment_efforts": {
             "type": "array",
             "items": {
-              "$ref": "{{reference_prefix}}/segment_effort.json#/SegmentEffort"
+              "$ref": "{{reference_prefix}}/segment_effort.json#/DetailedSegmentEffort"
             }
           },
           "device_name": {
@@ -58,7 +58,7 @@
           "best_efforts": {
             "type": "array",
             "items": {
-              "$ref": "{{reference_prefix}}/segment_effort.json#/SegmentEffort"
+              "$ref": "{{reference_prefix}}/segment_effort.json#/DetailedSegmentEffort"
             }
           }
         }
