--- a/swagger/segment_effort.json.mustache
+++ b/swagger/segment_effort.json.mustache
@@ -1,5 +1,5 @@
 {
-  "SegmentEffort": {
+  "DetailedSegmentEffort": {
     "allOf": [
       {
         "$ref": "{{reference_prefix}}/segment_effort.json#/SummarySegmentEffort"
