--- a/swagger/swagger.json.mustache
+++ b/swagger/swagger.json.mustache
@@ -605,7 +605,7 @@
             "schema": {
               "type": "array",
               "items": {
-                "$ref": "{{reference_prefix}}/segment_effort.json#/SegmentEffort"
+                "$ref": "{{reference_prefix}}/segment_effort.json#/DetailedSegmentEffort"
               }
             }
           },
@@ -703,7 +703,7 @@
           "200": {
             "description": "Representation of a segment effort",
             "schema": {
-              "$ref": "{{reference_prefix}}/segment_effort.json#/SegmentEffort"
+              "$ref": "{{reference_prefix}}/segment_effort.json#/DetailedSegmentEffort"
             }
           },
           "default": {
@@ -810,7 +810,7 @@
           "200": {
             "description": "The activity's detailed representation",
             "schema": {
-              "$ref": "{{reference_prefix}}/activity.json#/Activity"
+              "$ref": "{{reference_prefix}}/activity.json#/DetailedActivity"
             }
           },
           "default": {
@@ -848,7 +848,7 @@
           "200": {
             "description": "The activity's detailed representation",
             "schema": {
-              "$ref": "{{reference_prefix}}/activity.json#/Activity"
+              "$ref": "{{reference_prefix}}/activity.json#/DetailedActivity"
             }
           },
           "default": {
