--- a/swagger/activity_stats.json.mustache
+++ b/swagger/activity_stats.json.mustache
@@ -3,11 +3,11 @@
     "description": "A set of rolled-up statistics and totals for an athlete",
     "properties": {
       "biggest_ride_distance": {
-        "type": "integer",
+        "type": "float",
         "description": "The longest distance ridden by the athlete."
       },
       "biggest_climb_elevation_gain": {
-        "type": "integer",
+        "type": "float",
         "description": "The highest climb ridden by the athlete."
       },
       "recent_ride_totals": {
