Fixes the type/format typo for ActivityStats
In https://github.com/strava/developers.strava.com/commit/d8b419097e0d393c723615385743091a927e69b0, I made an attempt to properly declare those fields as floats - but I didn't actually properly follow the OpenAPI spec, which mandates floating point numbers to be declared as `number`s with a `format` of `float`.

Without this change, the Swagger code generator shows a warning but still generates the code.

Additionally, Todd's comment in the previous PR led me to think it'd be better to use double here, so I'm doing that.

--- a/swagger/activity_stats.json.mustache
+++ b/swagger/activity_stats.json.mustache
@@ -3,11 +3,13 @@
     "description": "A set of rolled-up statistics and totals for an athlete",
     "properties": {
       "biggest_ride_distance": {
-        "type": "float",
+        "type": "number",
+        "format": "double",
         "description": "The longest distance ridden by the athlete."
       },
       "biggest_climb_elevation_gain": {
-        "type": "float",
+        "type": "number",
+        "format": "double",
         "description": "The highest climb ridden by the athlete."
       },
       "recent_ride_totals": {
