Gets the playground to work
While testing the playgroud, I realized it was incorrectly configured. Since we rely on OAuth2 to authenticate athletes, the playground needs to have a page to handle the redirect that happens after the user authenticates - we had none. On top of that, we need to configure the correct `oauth2RedirectUrl` parameters in the playground configuration, and also amend the API specification to require some level of authentication for every request.

--- a/swagger/swagger.json.mustache
+++ b/swagger/swagger.json.mustache
@@ -20,11 +20,17 @@
       "authorizationUrl": "https://www.strava.com/api/v3/oauth/authorize",
       "tokenUrl": "https://www.strava.com/api/v3/oauth/token",
       "scopes": {
+        "public": "default, private activities are not returned, privacy zones are respected in stream requests",
         "view_private": "View private activities and data within privacy zones",
         "write": "Modify activities, upload on the user’s behalf"
       }
     }
   },
+  "security": [
+    {
+      "strava_oauth": ["public"]
+    }
+  ],
   "parameters": {
     "page": {
       "name": "page",
