--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,9 +6,9 @@
     <meta name="author" content="">
 
     <title>Strava Developers</title>
-	<link rel='icon' type='image/png' href="http://labs.strava.com/favicon-32x32.png" sizes='32x32'>
-	<link rel='icon' type='image/png' href="http://labs.strava.com/favicon-96x96.png" sizes='96x96'>
-	<link rel='icon' type='image/png' href="http://labs.strava.com/favicon-16x16.png" sizes='16x16'>
+	<link rel='icon' type='image/png' href="/images/favicon-32x32.png" sizes='32x32'>
+	<link rel='icon' type='image/png' href="/images/favicon-96x96.png" sizes='96x96'>
+	<link rel='icon' type='image/png' href="/images/favicon-16x16.png" sizes='16x16'>
 
     <link href="/bootstrap.min.css" rel="stylesheet">
     <link href="/tether.min.css" rel="stylesheet">
