[CP-1731] Revise definition of `resource_state` on API docs
Background:
This is the developers.strava.com counterpart to [CP-1719](https://strava.atlassian.net/browse/CP-1719). Developers were getting confused about the possible values and meaning of the `resource_state` attribute, so we want to be more explicit about what it means.

Solution:
Update the API documentation to reflect the possible values for resource_state.

Result:
developers.strava.com has updated `resource_state` documentation.

Completes [CP-1731](https://strava.atlassian.net/browse/CP-1731)

--- a/swagger/athlete.json.mustache
+++ b/swagger/athlete.json.mustache
@@ -70,7 +70,7 @@
         "properties": {
           "resource_state": {
             "type": "integer",
-            "description": "Resource state"
+            "description": "Resource state, indicates level of detail. Possible values: 1 -> \"meta\", 2 -> \"summary\", 3 -> \"detail\""
           },
           "firstname": {
             "type": "string",
