--- a/swagger/club.json.mustache
+++ b/swagger/club.json.mustache
@@ -95,7 +95,7 @@
       },
       "resource_state": {
         "type": "integer",
-        "description": "Resource state"
+        "description": "Resource state, indicates level of detail. Possible values: 1 -> \"meta\", 2 -> \"summary\", 3 -> \"detail\""
       },
       "name": {
         "type": "string",
