--- a/swagger/gear.json.mustache
+++ b/swagger/gear.json.mustache
@@ -35,7 +35,7 @@
       },
       "resource_state": {
         "type": "integer",
-        "description": "Resource state"
+        "description": "Resource state, indicates level of detail. Possible values: 2 -> \"summary\", 3 -> \"detail\""
       },
       "primary": {
         "type": "boolean",
