[CP-1710] Changing some types to be int64, strings and fixing some typos

--- a/swagger/club.json.mustache
+++ b/swagger/club.json.mustache
@@ -108,6 +108,7 @@
     "properties": {
       "id": {
         "type": "integer",
+        "format": "int64",
         "description": "The unique identifier of this announcement."
       },
       "club_id": {
