--- a/swagger/comment.json.mustache
+++ b/swagger/comment.json.mustache
@@ -4,10 +4,12 @@
     "properties": {
       "id": {
         "type": "integer",
+        "format": "int64",
         "description": "The unique identifier of this comment"
       },
       "activity_id": {
         "type": "integer",
+        "format": "int64",
         "description": "The identifier of the activity this comment is related to"
       },
       "text": {
