--- a/swagger/segment_leaderboard.json.mustache
+++ b/swagger/segment_leaderboard.json.mustache
@@ -66,6 +66,7 @@
       },
       "activity_id": {
         "type": "integer",
+        "format": "int64",
         "description": "The unique identifier of the activity associated with this entry"
       },
       "effort_id": {
