--- a/swagger/swagger.json.mustache
+++ b/swagger/swagger.json.mustache
@@ -58,7 +58,8 @@
             "in": "path",
             "description": "The identifier of the athlete.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           }
         ],
         "tags": [
@@ -91,7 +92,8 @@
             "in": "path",
             "description": "The identifier of the athlete.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           },
           {
             "$ref": "#/parameters/page"
@@ -133,7 +135,8 @@
             "in": "path",
             "description": "The identifier of the athlete.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           },
           {
             "$ref": "#/parameters/page"
@@ -175,7 +178,8 @@
             "in": "path",
             "description": "The identifier of the athlete.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           },
           {
             "$ref": "#/parameters/page"
@@ -217,7 +221,8 @@
             "in": "path",
             "description": "The identifier of the athlete.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           },
           {
             "$ref": "#/parameters/page"
@@ -507,7 +512,7 @@
           {
             "name": "id",
             "in": "path",
-            "description": "The identifier of the segment to get leaderbaords for.",
+            "description": "The identifier of the segment to get leaderboards for.",
             "required": true,
             "type": "integer"
           },
@@ -541,7 +546,7 @@
           {
             "name": "club_id",
             "in": "query",
-            "description": "Enables filtering of entries by the membership of a given clu",
+            "description": "Enables filtering of entries by the membership of a given club",
             "type": "integer"
           },
           {
@@ -800,7 +805,8 @@
             "in": "path",
             "description": "The identifier of the activity.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           },
           {
             "name": "include_all_efforts",
@@ -875,7 +881,8 @@
             "in": "path",
             "description": "The identifier of the activity.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           }
         ],
         "tags": [
@@ -1060,7 +1067,8 @@
             "in": "path",
             "description": "The unique identifier of the activity.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           },
           {
             "$ref": "#/parameters/page"
@@ -1102,7 +1110,8 @@
             "in": "path",
             "description": "The identifier of the activity.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           }
         ],
         "tags": [
@@ -1138,7 +1147,8 @@
             "in": "path",
             "description": "The identifier of the activity.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           }
         ],
         "tags": [
@@ -1174,7 +1184,8 @@
             "in": "path",
             "description": "The identifier of the activity.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           },
           {
             "$ref": "#/parameters/page"
@@ -1216,7 +1227,8 @@
             "in": "path",
             "description": "The identifier of the activity.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           },
           {
             "$ref": "#/parameters/page"
@@ -1626,7 +1638,8 @@
             "in": "path",
             "description": "The identifier of the athlete.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           },
           {
             "$ref": "#/parameters/page"
@@ -1744,7 +1757,7 @@
             "in": "path",
             "description": "The identifier of the upload.",
             "required": true,
-            "type": "integer"
+            "type": "string"
           }
         ],
         "tags": [
@@ -1777,7 +1790,8 @@
             "in": "path",
             "description": "The identifier of the activity.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           },
           {
             "name": "keys",
