--- a/swagger/upload.json.mustache
+++ b/swagger/upload.json.mustache
@@ -3,7 +3,7 @@
     "type": "object",
     "properties": {
       "id": {
-        "type": "integer",
+        "type": "string",
         "description": "The unique identifier of the upload"
       },
       "external_id": {
@@ -20,6 +20,7 @@
       },
       "activity_id": {
         "type": "integer",
+        "format": "int64",
         "description": "The identifier of the activity this upload resulted into"
       }
     }
