--- a/swagger/activity.json.mustache
+++ b/swagger/activity.json.mustache
@@ -77,7 +77,7 @@
             "description": "The identifier provided at upload time"
           },
           "upload_id": {
-            "type": "integer",
+            "type": "string",
             "description": "The identifier of the upload that resulted in this activity"
           },
           "athlete": {
@@ -213,6 +213,7 @@
     "properties": {
       "id": {
         "type": "integer",
+        "format": "int64",
         "description": "The unique identifier of the activity"
       }
     }
