--- a/swagger/photo.json.mustache
+++ b/swagger/photo.json.mustache
@@ -10,7 +10,8 @@
         "type": "object",
         "properties": {
           "id": {
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           },
           "source": {
             "type": "integer"
