--- a/swagger/segment.json.mustache
+++ b/swagger/segment.json.mustache
@@ -49,6 +49,7 @@
     "properties": {
       "id": {
         "type": "integer",
+        "format": "int64",
         "description": "The unique identifier of this segment"
       },
       "name": {
@@ -134,6 +135,7 @@
     "properties": {
       "id": {
         "type": "integer",
+        "format": "int64",
         "description": "The unique identifier of this segment"
       },
       "name": {
