fixup! [CP-1710] Changing some types to be int64, strings and fixing some typos

--- a/swagger/swagger.json.mustache
+++ b/swagger/swagger.json.mustache
@@ -413,7 +413,8 @@
             "in": "path",
             "description": "The identifier of the segment.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           }
         ],
         "tags": [
@@ -481,7 +482,8 @@
             "in": "path",
             "description": "The identifier of the segment to star.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           }
         ],
         "tags": [
@@ -514,7 +516,8 @@
             "in": "path",
             "description": "The identifier of the segment to get leaderboards for.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           },
           {
             "name": "gender",
@@ -598,7 +601,8 @@
             "in": "path",
             "description": "The identifier of the segment.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           },
           {
             "$ref": "#/parameters/page"
