fixup! [CP-1710] Changing some types to be int64, strings and fixing some typos

--- a/swagger/segment_leaderboard.json.mustache
+++ b/swagger/segment_leaderboard.json.mustache
@@ -25,6 +25,7 @@
       },
       "athlete_id": {
         "type": "integer",
+        "format": "int64",
         "description": "The unique identifier of the athlete"
       },
       "athlete_gender": {
