--- a/swagger/swagger.json.mustache
+++ b/swagger/swagger.json.mustache
@@ -847,7 +847,8 @@
             "in": "path",
             "description": "The identifier of the activity.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           },
           {
             "name": "body",
@@ -1576,7 +1577,7 @@
             "in": "path",
             "description": "The identifier of the gear.",
             "required": true,
-            "type": "integer"
+            "type": "string"
           }
         ],
         "tags": [
@@ -1928,7 +1929,8 @@
             "in": "path",
             "description": "The identifier of the segment.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           },
           {
             "name": "keys",
