--- a/swagger/athlete.json.mustache
+++ b/swagger/athlete.json.mustache
@@ -138,6 +138,7 @@
     "properties": {
       "id": {
         "type": "integer",
+        "format": "int64",
         "description": "The unique identifier of the athlete"
       }
     }
