fixup! [CP-1710] Changing some types to be int64, strings and fixing some typos

--- a/swagger/swagger.json.mustache
+++ b/swagger/swagger.json.mustache
@@ -58,8 +58,7 @@
             "in": "path",
             "description": "The identifier of the athlete.",
             "required": true,
-            "type": "integer",
-            "format": "int64"
+            "type": "integer"
           }
         ],
         "tags": [
@@ -92,8 +91,7 @@
             "in": "path",
             "description": "The identifier of the athlete.",
             "required": true,
-            "type": "integer",
-            "format": "int64"
+            "type": "integer"
           },
           {
             "$ref": "#/parameters/page"
@@ -135,8 +133,7 @@
             "in": "path",
             "description": "The identifier of the athlete.",
             "required": true,
-            "type": "integer",
-            "format": "int64"
+            "type": "integer"
           },
           {
             "$ref": "#/parameters/page"
@@ -178,8 +175,7 @@
             "in": "path",
             "description": "The identifier of the athlete.",
             "required": true,
-            "type": "integer",
-            "format": "int64"
+            "type": "integer"
           },
           {
             "$ref": "#/parameters/page"
@@ -221,8 +217,7 @@
             "in": "path",
             "description": "The identifier of the athlete.",
             "required": true,
-            "type": "integer",
-            "format": "int64"
+            "type": "integer"
           },
           {
             "$ref": "#/parameters/page"
@@ -1643,8 +1638,7 @@
             "in": "path",
             "description": "The identifier of the athlete.",
             "required": true,
-            "type": "integer",
-            "format": "int64"
+            "type": "integer"
           },
           {
             "$ref": "#/parameters/page"
@@ -1762,7 +1756,8 @@
             "in": "path",
             "description": "The identifier of the upload.",
             "required": true,
-            "type": "string"
+            "type": "integer",
+            "format": "int64"
           }
         ],
         "tags": [
