--- a/swagger/activity.json.mustache
+++ b/swagger/activity.json.mustache
@@ -77,7 +77,8 @@
             "description": "The identifier provided at upload time"
           },
           "upload_id": {
-            "type": "string",
+            "type": "integer",
+            "format": "int64",
             "description": "The identifier of the upload that resulted in this activity"
           },
           "athlete": {
