--- a/swagger/upload.json.mustache
+++ b/swagger/upload.json.mustache
@@ -3,7 +3,8 @@
     "type": "object",
     "properties": {
       "id": {
-        "type": "string",
+        "type": "integer",
+        "format": "int64",
         "description": "The unique identifier of the upload"
       },
       "external_id": {
