[CP-1710] Switches several identifiers to int64
This change updates the type of several identifiers to be int64: activites, segments, uploads in particular.

Along with this, it makes some updates to the test harness and the generation of the documentation and test code:

- we have been using `io.swagger.codegen.Codegen` as a main class to generate both the documentation and the test Java code. As it turns out, this class doesn't fail loudly and invoking it directly will not print an error message and not return an error code. Instead, we should call `io.swagger.codegen.SwaggerCodegen`, which is the main class invoked by the Swagger CLI.
- when the Docker image is built after having run the tests locally, it main contain the generated Java code at `specs/java/generated`. This is because we `COPY` the entire source tree and that the tree may be unclean. We should revisit this but in the meantime, a stopgap measure should be to simply delete the whole generated source before regenerating it.

--- a/swagger/activity.json.mustache
+++ b/swagger/activity.json.mustache
@@ -78,6 +78,7 @@
           },
           "upload_id": {
             "type": "integer",
+            "format": "int64",
             "description": "The identifier of the upload that resulted in this activity"
           },
           "athlete": {
@@ -213,6 +214,7 @@
     "properties": {
       "id": {
         "type": "integer",
+        "format": "int64",
         "description": "The unique identifier of the activity"
       }
     }
