--- a/swagger/upload.json.mustache
+++ b/swagger/upload.json.mustache
@@ -4,6 +4,7 @@
     "properties": {
       "id": {
         "type": "integer",
+        "format": "int64",
         "description": "The unique identifier of the upload"
       },
       "external_id": {
@@ -20,6 +21,7 @@
       },
       "activity_id": {
         "type": "integer",
+        "format": "int64",
         "description": "The identifier of the activity this upload resulted into"
       }
     }
