--- a/swagger/swagger.json.mustache
+++ b/swagger/swagger.json.mustache
@@ -408,7 +408,8 @@
             "in": "path",
             "description": "The identifier of the segment.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           }
         ],
         "tags": [
@@ -476,7 +477,8 @@
             "in": "path",
             "description": "The identifier of the segment to star.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           }
         ],
         "tags": [
@@ -509,7 +511,8 @@
             "in": "path",
             "description": "The identifier of the segment to get leaderbaords for.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           },
           {
             "name": "gender",
@@ -542,7 +545,8 @@
             "name": "club_id",
             "in": "query",
             "description": "Enables filtering of entries by the membership of a given clu",
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           },
           {
             "name": "date_range",
@@ -800,7 +804,8 @@
             "in": "path",
             "description": "The identifier of the activity.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           },
           {
             "name": "include_all_efforts",
@@ -837,7 +842,8 @@
             "in": "path",
             "description": "The identifier of the activity.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           },
           {
             "name": "body",
@@ -875,7 +881,8 @@
             "in": "path",
             "description": "The identifier of the activity.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           }
         ],
         "tags": [
@@ -1060,7 +1067,8 @@
             "in": "path",
             "description": "The unique identifier of the activity.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           },
           {
             "$ref": "#/parameters/page"
@@ -1102,7 +1110,8 @@
             "in": "path",
             "description": "The identifier of the activity.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           }
         ],
         "tags": [
@@ -1174,7 +1183,8 @@
             "in": "path",
             "description": "The identifier of the activity.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           },
           {
             "$ref": "#/parameters/page"
@@ -1744,7 +1754,8 @@
             "in": "path",
             "description": "The identifier of the upload.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           }
         ],
         "tags": [
@@ -1777,7 +1788,8 @@
             "in": "path",
             "description": "The identifier of the activity.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           },
           {
             "name": "keys",
@@ -1910,7 +1922,8 @@
             "in": "path",
             "description": "The identifier of the segment.",
             "required": true,
-            "type": "integer"
+            "type": "integer",
+            "format": "int64"
           },
           {
             "name": "keys",
