[CP-1772] Add rate limits page
Background:
Rate limiting is an important aspect of most public APIs. [developers.strava.com](https://developers.strava.com) needs a page that explains our rate limiting policies.

Solution:
Add a page with the Strava API rate limiting information. Add a card-block on the home page, as well as a link to the new page in the header dropdown bar.

Result:
[developers.strava.com](https://developers.strava.com) has a page about rate limits.

Completes [CP-1772](https://strava.atlassian.net/browse/CP-1772)

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -36,6 +36,7 @@
                 <a class="dropdown-item" href="/docs">Home</a>
                 <a class="dropdown-item" href="/docs/reference">Reference</a>
                 <a class="dropdown-item" href="/docs/authentication">Authentication</a>
+                <a class="dropdown-item" href="/docs/rate-limiting">Rate Limiting</a>
               </div>
             </li>
             <li class="nav-item">
