--- a/layouts/index.html
+++ b/layouts/index.html
@@ -101,6 +101,15 @@
           </div>
         </div>
       </div>
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-block">
+            <h3 class="card-title">Rate Limiting</h3>
+            <p class="card-text">Understand the rules for usage.</p>
+            <a href="/docs/rate-limiting" class="btn btn-primary">Review</a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
