Add webhooks documentation

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -38,6 +38,15 @@
           </div>
         </div>
       </div>
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-block">
+            <h3 class="card-title">Activity Webhook Events</h3>
+            <p class="card-text">Receive real-time activity updates.</p>
+            <a href="/docs/webhooks" class="btn btn-primary">Upgrade</a>
+          </div>
+        </div>
+      </div>
       <div class="col-md-8">
         <div class="card">
           <div class="card-block">
