--- a/swagger/segment_leaderboard.json.mustache
+++ b/swagger/segment_leaderboard.json.mustache
@@ -5,7 +5,17 @@
     "properties": {
       "entry_count": {
         "type": "integer",
-        "description": "The total number of entries for this leaderboard"
+        "description": "The total number of entries for this leaderboard",
+        "example": "1993"
+      },
+      "effort_count": {
+        "type": "integer",
+        "description": "Deprecated, use entry_count",
+        "example": "1993"
+      },
+      "kom_type": {
+        "type": "string",
+        "enum": ["kom", "cr"]
       },
       "entries": {
         "type": "array",
@@ -21,38 +31,18 @@
     "properties": {
       "athlete_name": {
         "type": "string",
-        "description": "The name of the athlete"
-      },
-      "athlete_id": {
-        "type": "integer",
-        "description": "The unique identifier of the athlete"
-      },
-      "athlete_gender": {
-        "type": "string",
-        "enum": ["M", "F"]
-      },
-      "average_hr": {
-        "type": "number",
-        "format": "float",
-        "description": "The average cadence of the effort associated with this entry"
-      },
-      "average_watts": {
-        "type": "number",
-        "format": "float",
-        "description": "The average wattage of the effort associated with this entry"
-      },
-      "distance": {
-        "type": "number",
-        "format": "float",
-        "description": "The effort's distance in meters"
+        "description": "The public name of the athlete",
+        "example": "P. Sagan"
       },
       "elapsed_time": {
         "type": "integer",
-        "description": "The elapsed of the segment effort associated with this entry"
+        "description": "The elapsed of the segment effort associated with this entry",
+        "example": "100"
       },
       "moving_time": {
         "type": "integer",
-        "description": "The moving of the segment effort associated with this entry"
+        "description": "The moving of the segment effort associated with this entry",
+        "example": "80"
       },
       "start_date": {
         "type": "string",
@@ -64,23 +54,9 @@
         "format": "date-time",
         "description": "The time at which the effort was started in the local timezone."
       },
-      "activity_id": {
-        "type": "integer",
-        "format": "int64",
-        "description": "The unique identifier of the activity associated with this entry"
-      },
-      "effort_id": {
-        "type": "integer",
-        "format": "int64",
-        "description": "The unique identifier of the segment effort associated with this entry"
-      },
       "rank": {
         "type": "integer",
         "description": "The rank of this entry in the leaderboard"
-      },
-      "athlete_profile": {
-        "type": "string",
-        "description": "The URL of the athlete's profile picture"
       }
     }
   }
