Specify athlete authentication for athletes/:id/routes endpoint

--- a/swagger/swagger.json.mustache
+++ b/swagger/swagger.json.mustache
@@ -1386,7 +1386,7 @@
       "get": {
         "operationId": "getRoutesByAthleteId",
         "summary": "List Athlete Routes",
-        "description": "Returns a list of the routes created by an athlete using their identifier.",
+        "description": "Returns a list of the routes created by the authenticated athlete using their athlete ID.",
         "parameters": [
           {
             "name": "id",
