Create the Activity Uploads page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -110,6 +110,15 @@
           </div>
         </div>
       </div>
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-block">
+            <h3 class="card-title">Uploads API</h3>
+            <p class="card-text">Understand the rules for usage.</p>
+            <a href="/docs/uploads" class="btn btn-primary">Know</a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
