[API-711] Fixing the typo

--- a/swagger/swagger.json.mustache
+++ b/swagger/swagger.json.mustache
@@ -281,7 +281,7 @@
           {
             "name": "id",
             "in": "path",
-            "description": "The identifier of the segment to get leaderbaords for.",
+            "description": "The identifier of the segment to get the leaderboards for.",
             "required": true,
             "type": "integer",
             "format": "int64"
