--- a/codegen/src/main/resources/strava-html/reference.mustache
+++ b/codegen/src/main/resources/strava-html/reference.mustache
@@ -245,6 +245,7 @@ type = "reference"
               <div class="license-url">{{{licenseUrl}}}</div>
             {{/licenseUrl}}
           </div>
+          <div>Contact Info: {{test}} and {{{test}}} and {{packageName}}</div>
         </div>
         <div id="generator">
           <div class="content">
